# campus-practice

./: .gitignore  README.md
backend/: .env.example  mvnw.cmd  pom.xml  pyproject.toml
backend/app/: common.py  config.py  database.py  main.py  schemas.py  security.py
backend/app/routers/: auth.py  users.py
backend/data/: app.db
backend/src/main/java/com/demo/config/: CorsConfig.java  GlobalExceptionHandler.java
backend/src/main/java/com/demo/controller/: UserController.java
backend/src/main/java/com/demo/entity/: User.java
backend/src/main/java/com/demo/filter/: JwtAuthenticationFilter.java
backend/src/main/java/com/demo/service/: UserService.java
backend/src/main/java/com/demo/service/impl/: UserServiceImpl.java
backend/src/main/java/com/demo/util/: JwtUtil.java
backend/src/main/resources/: application.yml
backend/user_management_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo rag/: RAG.py
demo rag/知识文档/: 杂用数据.docx
demo/src/main/java/com/demo/config/: MyMetaObjectHandler.java
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  main.tsx
frontend/src/api/: user.js
frontend/src/components/: AuthIllustration.tsx  PageHeader.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx  auth-context.ts
frontend/src/pages/: HistoryPage.tsx  KnowledgePage.tsx  LoginPage.tsx  QAPage.tsx  RegisterPage.tsx  UsersPage.tsx
frontend/src/router/: index.js
frontend/src/utils/: request.js
frontend/src/views/: Home.vue  Login.vue  Register.vue
